--- a/community/index.html
+++ b/community/index.html
@@ -36,8 +36,8 @@
 
 
 
-<link rel="preload" href="/scss/main.min.696907d17540bcec6870b15b6956519730aa9fbeae6827630470ba7cb374862f.css" as="style">
-<link href="/scss/main.min.696907d17540bcec6870b15b6956519730aa9fbeae6827630470ba7cb374862f.css" rel="stylesheet" integrity="">
+<link rel="preload" href="/scss/main.min.eb72ad632256ceae7b47772b74b4c0e6d0586cddfb3753034cc668b1d4b6e017.css" as="style">
+<link href="/scss/main.min.eb72ad632256ceae7b47772b74b4c0e6d0586cddfb3753034cc668b1d4b6e017.css" rel="stylesheet" integrity="">
 
 <script
   src="https://code.jquery.com/jquery-3.5.1.min.js"
@@ -118,7 +118,7 @@ if (!doNotTrack) {
 			
 		</ul>
 	</div>
-	<div class="navbar-nav d-none d-lg-block"><input type="search" class="form-control td-search-input" placeholder="&#xf002; Search this site…" aria-label="Search this site…" autocomplete="off">
+	<div class="navbar-nav d-none d-lg-block"><input type="search" class="form-control td-search-input" placeholder="&#xf002; 搜索内容" aria-label="搜索内容" autocomplete="off">
 </div>
 </nav>
 
