--- a/index.html
+++ b/index.html
@@ -53,8 +53,8 @@
 
 
 
-<link rel="preload" href="/scss/main.min.123decaccc66067d80a4fc16a773b44a3c53c308d332795704949d7d06fdbfbf.css" as="style">
-<link href="/scss/main.min.123decaccc66067d80a4fc16a773b44a3c53c308d332795704949d7d06fdbfbf.css" rel="stylesheet" integrity="">
+<link rel="preload" href="/scss/main.min.11bd201405a95a24fdf9ff02304eba7e581a9f6713f00cc6775fbaa08a2d1a4a.css" as="style">
+<link href="/scss/main.min.11bd201405a95a24fdf9ff02304eba7e581a9f6713f00cc6775fbaa08a2d1a4a.css" rel="stylesheet" integrity="">
 
 <script
   src="https://code.jquery.com/jquery-3.5.1.min.js"
@@ -77,7 +77,7 @@ if (!doNotTrack) {
   <body class="td-home">
     <header>
       
-<nav class="js-navbar-scroll navbar navbar-expand navbar-dark flex-column flex-md-row td-navbar">
+<nav class="js-navbar-scroll navbar navbar-expand navbar-dark  td-navbar-cover flex-column flex-md-row td-navbar">
         <a class="navbar-brand" href="/">
 		<span class="navbar-logo"></span><span class="text-uppercase font-weight-bold">JavaShare</span>
 	</a>
@@ -173,7 +173,7 @@ if (!doNotTrack) {
 }
 </style>
 
-<section id="td-cover-block-0" class="row td-cover-block td-cover-block--height-full td-overlay td-overlay--dark -bg-orange">
+<section id="td-cover-block-0" class="row td-cover-block td-cover-block--height-full js-td-cover td-overlay td-overlay--dark -bg-orange">
   <div class="container td-overlay__inner">
     <div class="row">
       <div class="col-12">
